[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[lib]
name = "firmware"
path = "src/main.rs"
crate-type = ["staticlib"]

[[bin]]
name = "firmware"
path = ""
required-features = []

[dependencies]
opensprig-rs = { path = "../.." }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
